tests/NormalTests/paczka2/big_fuzzy/19405426.err
Error in line 5: UcuIhM S710 -3,7
Error in line 4: UcuIhM S710 75,6
Error in line 9: UcuIhM A482 63,8
Error in line 15: UcuIhM S710 10,1
Error in line 10: XXL S710 15,2
Error in line 13: q9diq76won A482 62,2
Error in line 20: BDv S564 99,4
Error in line 18: q9diq76won S564 53,6
Error in line 25: S710 A482 24,0
Error in line 36: X0LE A482 29,3
Error in line 39: X0LE A836 99,2
Error in line 48: X0LE S564 665,2
Error in line 57: q9diq76won S710 92,3
Error in line 54: XXL A482 85,4
Error in line 68: XXL A482 15,6
Error in line 70: XXL A836 28,8
Error in line 71: XXL S564 12,6
Error in line 73: q9diq76won S710 30,3
Error in line 76: q9diq76won A482 24,4
Error in line 74: UcuIhM S710 16,9
Error in line 90: UcuIhM S710 8,8
Error in line 97: S710 A482 95,2
Error in line 99: S710 S710 75,0
Error in line 103: UcuIhM S710 32,0
Error in line 105: q9diq76won S564 87,7
Error in line 119: X0LE A482 -2,9
Error in line 122: XXL S564 18,4
Error in line 115: 5JX A482 0,6
Error in line 131: S710 A836 53,4
Error in line 141: 5JX A482 49,8
Error in line 157: S710 A836 82,2
Error in line 158: S710 S564 50,1
Error in line 175: S710 S564 33,1
Error in line 173: XXL A836 4,9
Error in line 181: XXL S710 1,4
Error in line 189: X0LE A836 228,9
Error in line 180: S710 A836 36,6
Error in line 196: X0LE A836 62,0
Error in line 205: X0LE S710 6,6
Error in line 193: XXL A482 70,2
Error in line 207: 5JX A482 0,4
Error in line 208: X0LE A482 3,6
Error in line 200: S710 S710 178,9
Error in line 209: XXL S564 85,7
Error in line 202: UcuIhM A836 19,8
Error in line 229: 5JX A482 5,2
Error in line 248: S710 A836 61,2
